# Faster-Whisper-API

./: ecosystem.config.js  pyproject.toml
app/: dependencies.py  main.py  schemas.py
app/config/: settings.py
app/routers/: transcribe_async.py
app/services/: audio_processor.py  transcriber.py
scripts/: install.ps1
